# cpp-demo

./: .gitignore
cmake-with-vscode/: CMakeLists.txt  main.cpp
cmake-with-vscode/inc/: Foo.h
cmake-with-vscode/src/: Foo.cpp
cpp-with-vscode/: main.cpp
